# blender-mcp

./: LICENSE  MCP.md  README.md  addon.py  blender_mcp_addon.py  blender_mcp_server.py  main.py  pyproject.toml  test_ping.py  test_simple_info.py
src/blender_mcp/: __init__.py  server.py
tests/: test_scene_info.py  test_socket_connection.py
